--- a/firebase_deneme/products.html
+++ b/firebase_deneme/products.html
@@ -10,18 +10,7 @@
 </head>
 <body>
     <div id="productsDiv" class="container">
-        <div class="productcard">
-            <img src="images/laptop1.jpg" class="thumb mt-2" id="thumb1" width="1000px" height="1000px">
-            <p class="title" id="title1">laptop asdasda asdadadas adasdada adas</p>
-            <ul class="points">
-                <li>laptop asdasda asdadadas adasdada adas</li>
-                <li>laptop asdasda asdadadas adasdada adas</li>
-                <li>laptop asdasda asdadadas adasdada adas</li>
-                <li>laptop asdasda asdadadas adasdada adas</li>
-            </ul>
-            <h5>Rs. 18,500</h5>
-            <button class="btn" id="detbtn">View Details</button>
-        </div>
+        
     </div>
 
     <script>
@@ -31,5 +20,8 @@
             return title + "...";
         }
     </script>
+
+    <script src="products.js" type="module"></script>
+    
 </body>
 </html>
