--- a/firebase_deneme/admin.html
+++ b/firebase_deneme/admin.html
@@ -70,8 +70,8 @@
 </head>
 <body>
     <label>Product Name</label> <input type="text" id="nameinp"> <br> <br>
-    <label>Product Price</label> <input type="text" id="priceinp"> <br> <br>
-    <label>Stock (Quantity)</label> <input type="text" id="stockinp"> <br> <br> 
+    <label>Product Price</label> <input type="number" id="priceinp"> <br> <br>
+    <label>Stock (Quantity)</label> <input type="number" id="stockinp"> <br> <br> 
     <label>Category</label> 
     <select id="catinp">
         <option value="Keyboard and Mouse">Keyboard and Mouse</option>
