--- a/firebase_deneme/admin.html
+++ b/firebase_deneme/admin.html
@@ -74,11 +74,10 @@
     <label>Stock (Quantity)</label> <input type="number" id="stockinp"> <br> <br> 
     <label>Category</label> 
     <select id="catinp">
-        <option value="Keyboard and Mouse">Keyboard and Mouse</option>
+        <option value="Gaming PC's">Gaming PC'S</option>
         <option value="Laptops">Laptops</option>
-        <option value="Monitors">Monitors</option>
+        <option value="Gaming Laptops">Monitors</option>
         <option value="Graphics Card">Graphics Card</option>
-        <option value="Power Supply">Power Supply</option>    
     </select> <br> <br>
 
     <label>Points #1</label> <input type="text" id="p1inp" class="pointers"> <br> <br>
